# arfminesweeper

./: .gitignore  CMakeLists.txt  RANKING.md  README.md  TODO.md  flag.xbm  game.c  game.h  main.c
.github/workflows/: build.yml
assets/: msboard.fs  msboard.gs  msboard.html  msboard.vs  msboard4.frag  msboard4fs.spv  msboard4vs.spv
common/: .game.o.cmd  frontconf.h  game.c  game.h
efi_src/: CMakeLists.txt  data.c  efi_app.c  textdefs.h
frontends/: .sdl1.c.swp  ansi.c  bmp.c  bmp.h  common.h  console.c  console.h  d2d.c  d2d.h  drmfb.c  drmfb.h  fbdev.c  fbdev.h  gdi.c  gdi.h  gl11.c  gl33.c  gl33.h  glutil.c  glutil.h  gtk3.c  gtk3.h  httpd.c  httpd.h  motif.c  motif.h  opengl_1_1_glut.c  opengl_1_1_glut.h  qt5.cpp  qt5.hpp  raylib.c  raylib.h  sdl1.c  sdl1.h  sdl2.c  sdl2.h  vk.c  vk.h  vt100.c  vt100.h  (+13 more)
frontends/common/: fb.c  fb.h
kernel_src/: CMakeLists.txt  Makefile  alloc.c  alloc.h  common.c  common.h  conrgbfb.c  conrgbfb.h  console.c  console.h  convga.c  convga.h  fbrgb.c  fbrgb.h  fbvga.c  font_8x16.c  font_8x16.h  grub.cfg  idt.c  idt.h  int32.asm  int32.h  int86.asm  int86.h  isr_irq.asm  isr_irq_handler.c  isr_irq_handler.h  kernel.c  kernel_entry.asm  keyb.c  keyb.h  linker-flat.ld  linker-mb2.ld  linker.ld  linker_dbg.ld  mbr_boot.asm  mbr_boot.s  memmap.md  multiboot2.h  plibc.c  (+14 more)
kernel_src/drivers/: convga.c  convga.h  fbrgb.c  fbrgb.h  fbvga.c  keyb.c  rtc_time.c
kernel_src/kfrontends/: vgacli.c  vgacli.h  vgacon.c  vgacon.h  vgagra.c  vgagra.h  vgatui.c  vgatui.h  vgatxt.c  vgatxt.h
main_src/: CMakeLists.txt  CMakeLists.txt.new  frontend.c  frontend.h  main.c
main_src/frontends/: CMakeLists.txt  console.h  curses.c  curses.h  drmfb.c  fbdev.c  fltk.hpp  gl11.c  gl33.c  gl33.h  glut.c  glut.h  glx.c  gtk3.c  gtk3.h  httpd.c  java.c  java.h  motif.c  sdl1.c  sdl2.c  xforms.c  xforms.h  xlib.c
main_src/frontends/ansi/: CMakeLists.txt  ansi.c  ansi.h
main_src/frontends/awt/: CMakeLists.txt  awt.c  awt.h  awt.java
main_src/frontends/common/: ArfBackend.h  ArfBackend.java  CMakeLists.txt  arfjavabindings.c  gl_ffp.c  gl_ffp.h  stb_image_impl.c
main_src/frontends/console/: CMakeLists.txt  console.c  console.h
main_src/frontends/curses/: CMakeLists.txt  curses.c  curses.h
main_src/frontends/d2d/: CMakeLists.txt  d2d.c  d2d.h
main_src/frontends/drmfb/: CMakeLists.txt  drmfb.c  drmfb.h
main_src/frontends/fbdev/: CMakeLists.txt  fbdev.c  fbdev.h
main_src/frontends/fltk/: CMakeLists.txt  fltk.cpp  fltk.hpp
main_src/frontends/gdi/: CMakeLists.txt  gdi.c  gdi.h
main_src/frontends/gl11/: CMakeLists.txt  gl11.c  gl11.h
main_src/frontends/gl33/: CMakeLists.txt  gl33.c  gl33.h
main_src/frontends/glx/: CMakeLists.txt  glx.c  glx.h
main_src/frontends/gtk3/: CMakeLists.txt  gtk3.c  gtk3.h
main_src/frontends/httpd/: CMakeLists.txt  httpd.c  httpd.h
main_src/frontends/java/: CMakeLists.txt  awt.java  awt_frame.h  java.c  java.h
main_src/frontends/javaawt/: Backend.h  CMakeLists.txt  awt.java  backend.c  javaawt.c  javaawt.h  javaawt.java
main_src/frontends/motif/: CMakeLists.txt  motif.c  motif.h
main_src/frontends/qt5/: CMakeLists.txt  qt5.cpp  qt5.hpp
main_src/frontends/sdl1/: CMakeLists.txt  sdl1.c  sdl1.h
main_src/frontends/sdl2/: CMakeLists.txt  sdl2.c  sdl2.h
main_src/frontends/shaders/: msboard.fs  msboard4.vert
main_src/frontends/swing/: CMakeLists.txt  swing.c  swing.h  swing.java
main_src/frontends/template_tk/: CMakeLists.txt  template.cpp  template.hpp  wxwidgets.cpp  wxwidgets.hpp
main_src/frontends/vk/: CMakeLists.txt  msboard4.frag  vk.c  vk.h
main_src/frontends/vt100/: CMakeLists.txt  vt100.c  vt100.h
main_src/frontends/wayland/: CMakeLists.txt  wayland.c  wayland.h
main_src/frontends/win32/: CMakeLists.txt  win32.c  win32.h
main_src/frontends/wxwidgets/: CMakeLists.txt  wxwidgets.cpp  wxwidgets.hpp
main_src/frontends/xaw/: CMakeLists.txt  xaw.c  xaw.h
main_src/frontends/xcb/: CMakeLists.txt  xcb.c  xcb.h  xcbutil.c  xcbutil.h
main_src/frontends/xforms/: CMakeLists.txt  xforms.c  xforms.h
main_src/frontends/xlib/: CMakeLists.txt  xlib.c  xlib.h
mod_src/: ..module-common.o.cmd  .Module.symvers.cmd  .arfminesweeper.ko.cmd  .arfminesweeper.mod.cmd  .arfminesweeper.mod.o.cmd  .arfminesweeper.o.cmd  .module.o.cmd  .modules.order.cmd  CMakeLists.txt  Kbuild  Makefile  arfminesweeper.ko  arfminesweeper.mod  arfminesweeper.mod.c  module.c  modules.order
