add_subdirectory("java")
add_subdirectory("qt5")
add_subdirectory("xcb")
add_subdirectory("gl33")
add_subdirectory("gtk3")
add_subdirectory("gl11")
add_subdirectory("fltk")
add_subdirectory("d2d")
add_subdirectory("sdl1")
add_subdirectory("xforms")
add_subdirectory("vt100")
add_subdirectory("console")
add_subdirectory("vk")
add_subdirectory("fbdev")
add_subdirectory("motif")
add_subdirectory("win32")
add_subdirectory("wayland")
add_subdirectory("ansi")
add_subdirectory("sdl2")
add_subdirectory("xaw")
add_subdirectory("glx")
add_subdirectory("gdi")
add_subdirectory("curses")
add_subdirectory("xlib")
add_subdirectory("httpd")
add_subdirectory("drmfb")
add_subdirectory("wxwidgets")

