if (MODULES_ALL)
    set(MODULE_ANSI BOOL TRUE)
    set(MODULE_CONSOLE BOOL TRUE)
    set(MODULE_CURSES BOOL TRUE)
    set(MODULE_D2D BOOL TRUE)
    set(MODULE_DRMFB BOOL TRUE)
    set(MODULE_FBDEV BOOL TRUE)
    set(MODULE_FLTK BOOL TRUE)
    set(MODULE_GDI BOOL TRUE)
    set(MODULE_GL11 BOOL TRUE)
    set(MODULE_GL33 BOOL TRUE)
    set(MODULE_GLX BOOL TRUE)
    set(MODULE_GTK3 BOOL TRUE)
    set(MODULE_HTTPD BOOL TRUE)
    set(MODULE_JAVA BOOL TRUE)
    set(MODULE_MOTIF BOOL TRUE)
    set(MODULE_QT5 BOOL TRUE)
    set(MODULE_SDL1 BOOL TRUE)
    set(MODULE_SDL2 BOOL TRUE)
    set(MODULE_VK BOOL TRUE)
    set(MODULE_VT100 BOOL TRUE)
    set(MODULE_WAYLAND BOOL TRUE)
    set(MODULE_WIN32 BOOL TRUE)
    set(MODULE_WXWIDGETS BOOL TRUE)
    set(MODULE_XAW BOOL TRUE)
    set(MODULE_XCB BOOL TRUE)
    set(MODULE_XFORMS BOOL TRUE)
    set(MODULE_XLIB BOOL TRUE)
endif()

if (NOT NO_STATIC)
    set(STATIC_ANSI BOOL TRUE)
    set(STATIC_CONSOLE BOOL TRUE)
    set(STATIC_CURSES BOOL TRUE)
    set(STATIC_D2D BOOL TRUE)
    set(STATIC_DRMFB BOOL TRUE)
    set(STATIC_FBDEV BOOL TRUE)
    set(STATIC_FLTK BOOL TRUE)
    set(STATIC_GDI BOOL TRUE)
    set(STATIC_GL11 BOOL TRUE)
    set(STATIC_GL33 BOOL TRUE)
    set(STATIC_GLX BOOL TRUE)
    set(STATIC_GTK3 BOOL TRUE)
    set(STATIC_HTTPD BOOL TRUE)
    set(STATIC_JAVA BOOL TRUE)
    set(STATIC_MOTIF BOOL TRUE)
    set(STATIC_QT5 BOOL TRUE)
    set(STATIC_SDL1 BOOL TRUE)
    set(STATIC_SDL2 BOOL TRUE)
    set(STATIC_VK BOOL TRUE)
    set(STATIC_VT100 BOOL TRUE)
    set(STATIC_WAYLAND BOOL TRUE)
    set(STATIC_WIN32 BOOL TRUE)
    set(STATIC_WXWIDGETS BOOL TRUE)
    set(STATIC_XAW BOOL TRUE)
    set(STATIC_XCB BOOL TRUE)
    set(STATIC_XFORMS BOOL TRUE)
    set(STATIC_XLIB BOOL TRUE)
endif()

add_custom_target(module_dir ALL
    COMMAND ${CMAKE_COMMAND} -E make_directory ${MODULE_DIR})

add_subdirectory("java")
add_subdirectory("qt5")
add_subdirectory("xcb")
add_subdirectory("gl33")
add_subdirectory("gtk3")
add_subdirectory("gl11")
add_subdirectory("fltk")
add_subdirectory("d2d")
add_subdirectory("sdl1")
add_subdirectory("xforms")
add_subdirectory("vt100")
add_subdirectory("console")
add_subdirectory("vk")
add_subdirectory("fbdev")
add_subdirectory("motif")
add_subdirectory("win32")
add_subdirectory("wayland")
add_subdirectory("ansi")
add_subdirectory("sdl2")
add_subdirectory("xaw")
add_subdirectory("glx")
add_subdirectory("gdi")
add_subdirectory("curses")
add_subdirectory("xlib")
add_subdirectory("httpd")
add_subdirectory("drmfb")
add_subdirectory("wxwidgets")


