if (CURSES_FOUND)
    if (MODULE_CURSES)
        add_library(arfminesweeper-curses MODULE "curses.c")
        target_compile_definitions(arfminesweeper-curses PUBLIC _MODULE_)
        target_link_libraries(arfminesweeper-curses ${CURSES_LIBRARIES})
        add_custom_target(symlink_arfminesweeper-curses ALL
            COMMAND ln -fs "${CMAKE_CURRENT_BINARY_DIR}/*.so" ${MODULE_DIR}
            DEPENDS arfminesweeper-curses module_dir)
        message(STATUS "Building with module curses")
    else()
        message(STATUS "Not building with module curses")
    endif()

    if (STATIC_CURSES)
        target_sources(arfminesweeper PRIVATE "curses.c")
        target_link_libraries(arfminesweeper ${CURSES_LIBRARIES})
        target_compile_definitions(arfminesweeper PUBLIC FRONTEND_CURSES)
        message(STATUS "Building with static curses")
    else()
        message(STATUS "Not building with static curses")
    endif()
else()
    message(STATUS "No curses/ncurses found")
endif()

